Updated Form component to display submitted data and fixed alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,10 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+
+.main_container{
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - 72px);
+    
+}
